<resources>
    <string name="app_name">AutoPlaner</string>
    <string name="title_food">Покупки</string>
    <string name="title_notifications">Уведомления</string>
    <string name="title_plan">План</string>
    <string name="title_tasks">Задачи</string>
    <string name="title_profile">Профиль</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_name">Ваше имя</string>
    <string name="next">далее</string>
    <string name="_1_5">1/5</string>
    <string name="work_peak">Пик работоспособности</string>
    <string name="begin">Начало</string>
    <string name="_00_00">00:00</string>
    <string name="set">Установить</string>
    <string name="end">Конец </string>
    <string name="_4_5">4/5</string>
    <string name="work_pom_time">Время рабочего помидора</string>
    <string name="_25">25</string>
    <string name="_30">30</string>
    <string name="_40">40</string>
    <string name="_50">50</string>
    <string name="_60">60</string>
    <string name="_5_5">5/5</string>
    <string name="finish">Завершить</string>
    <string name="wakeup_time">Время подъема</string>
    <string name="bed_time">Время отхода ко сну</string>
    <string name="breakfast_time">Время завтрака</string>
    <string name="lunch_time">Время обеда</string>
    <string name="diner_time">Время ужина</string>
    <string name="_2_5">2/5</string>
    <string name="monday">Понедельник</string>
    <string name="begin_time">Начало работы</string>
    <string name="work_day">Рабочий день  </string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>
    <string name="sunday">Воскресенье</string>
    <string name="_3_5">3/5</string>
    <string name="_20_01">20.1</string>
    <string name="name">Название</string>
    <string name="group_task">Составная задача</string>
    <string name="_0">0</string>
    <string name="description">Описание</string>
    <string name="task_work_time">Время выполнения</string>
    <string name="difficulty">Сложность</string>
    <string name="deadline">Дедлайн</string>
    <string name="dd_mm">дд.мм.гггг</string>
    <string name="week_days">Дни недели для выполнения</string>
    <string name="save">Сохранить</string>
    <string name="task_begin_time">Время начала</string>
    <string name="task_end_time">Время окончания</string>
    <string name="date">Дата</string>
    <string name="priority">Приоритет</string>
    <string name="regular">Частота повторений</string>
    <string name="profile">Profile</string>
    <string name="one_time_task">Разовые задачи</string>
    <string name="fixed_task">Фиксированные задачи</string>
    <string name="routine_task">Регулярные задачи</string>
    <string name="all_tasks">Все задачи</string>
    <string name="group_tasks">Составные задачи</string>
    <string name="files">Файлы</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="auto_plan">Автоматическое распределение задач</string>
    <string name="miniBreak">Перерыв после каждого помидора</string>
    <string name="bigBreak">Большой перерыв</string>
    <string name="_200">200 руб.</string>
    <string name="cost">Стоимость</string>
    <string name="count">Количество</string>
    <string name="plan">Plan</string>
    <string name="past_text">Не оглядывайся назад, иди только вперед!</string>
    <string name="today">Сегодня</string>
    <string name="m">п</string>
    <string name="tue">в</string>
    <string name="w">с</string>
    <string name="th">ч</string>
    <string name="sun">в</string>
    <string name="_01">01</string>
    <string name="_02">02</string>
    <string name="_03">03</string>
    <string name="_04">04</string>
    <string name="_05">05</string>
    <string name="_06">06</string>
    <string name="_07">07</string>
    <string name="empty">Похоже тут пусто</string>
    <string name="edit">Edit</string>
    <string name="information">Information</string>
</resources>