<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_plan">

    <fragment
        android:id="@+id/navigation_food"
        android:name="com.example.planer.ui.food.FoodFragment"
        android:label="@string/title_food"
        tools:layout="@layout/fragment_food"/>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.planer.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_plan"
        android:name="com.example.planer.ui.plan.PlanFragment"
        android:label="@string/title_plan"
        tools:layout="@layout/fragment_plan" />

    <fragment
        android:id="@+id/navigation_tasks"
        android:name="com.example.planer.ui.tasks.TasksFragment"
        android:label="@string/title_tasks"
        tools:layout="@layout/fragment_tasks" >
        <action
            android:id="@+id/action_navigation_tasks_to_tasks_types"
            app:destination="@id/tasks_types" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.planer.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/tasks_types"
        android:name="com.example.planer.ui.tasks.TasksTypesFragment"
        android:label="@string/title_tasks"
        tools:layout="@layout/fragment_tasks_types" />

</navigation>