<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.first_come.PutPomodoro">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/work_pom_time"
                    android:textSize="@dimen/h1_text"
                    android:layout_marginTop="20dp" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="16dp"
                    >

                    <RadioButton
                        android:id="@+id/pom_25"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_25"
                        android:textSize="@dimen/h2_text"
                        android:layout_marginTop="8dp"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/pom_30"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_30"
                        android:textSize="@dimen/h2_text"
                        android:layout_marginTop="8dp"/>

                    <RadioButton
                        android:id="@+id/pom_40"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_40"
                        android:textSize="@dimen/h2_text"
                        android:layout_marginTop="8dp"/>

                    <RadioButton
                        android:id="@+id/pom_50"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_50"
                        android:textSize="@dimen/h2_text"
                        android:layout_marginTop="8dp"/>

                    <RadioButton
                        android:id="@+id/pom_60"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_60"
                        android:textSize="@dimen/h2_text"
                        android:layout_marginTop="8dp"/>
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="340dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_5_5"
                        android:textSize="18sp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:layout_marginTop="20dp"/>

                    <Button
                        android:id="@+id/next5_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/finish"
                        android:layout_marginBottom="20dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="0"/>

                </LinearLayout>

            </LinearLayout>

    </ScrollView>

</FrameLayout>